Don't make member variables const

It breaks list initialization with Qt 6.7

BUG: 481877